tests/parser/parse-lisp.1.bad.error
error: Malformed lisp expression
  --> test:4:16
   |
 4 |  (define f (lisp))
   |                 ^ expected expression type
