tests/parser/parse-lisp.1.bad.coalton
;; BAD: Parse Lisp
(package test-package)

(define f (lisp))
